--- a/zeeno/hello-world/CMakeLists.txt
+++ b/zeeno/hello-world/CMakeLists.txt
@@ -11,3 +11,10 @@ file(GLOB_RECURSE sourceFiles
 )
 
 add_executable(${PROJECT_NAME} ${sourceFiles})
+target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/include/")
+
+if(MSVC)
+    target_compile_options(${PROJECT_NAME} PRIVATE /W4)
+else()
+    target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)
+endif()
