--- a/chip/big-int/CMakeLists.txt
+++ b/chip/big-int/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.18)
-project(simple_calc LANGUAGES CXX)
+project(big_int LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
