--- a/chip/mqqt-exporter/CMakeLists.txt
+++ b/chip/mqqt-exporter/CMakeLists.txt
@@ -10,11 +10,27 @@ file(GLOB_RECURSE sourceFiles
     "${CMAKE_SOURCE_DIR}/include/*.hpp"
 )
 
+set(BUILD_DIR "${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}")
+
+list(APPEND CMAKE_MODULE_PATH ${BUILD_DIR})
+list(APPEND CMAKE_PREFIX_PATH ${BUILD_DIR})
+
+set(OUT_DIR "${CMAKE_SOURCE_DIR}/build/${CMAKE_BUILD_TYPE}/out/")
+
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${OUT_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${OUT_DIR}/bin)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${OUT_DIR}/bin)
+set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/out/bin")
+
+include(${BUILD_DIR}/conanbuildinfo_multi.cmake)
+conan_basic_setup(NO_OUTPUT_DIRS)
+
 add_executable(${PROJECT_NAME} ${sourceFiles})
 target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/include/")
+conan_target_link_libraries(${PROJECT_NAME})
 
 if(MSVC)
-    target_compile_options(${PROJECT_NAME} PRIVATE /W4 )
+    target_compile_options(${PROJECT_NAME} PRIVATE /W4)
 else()
     target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -pedantic)
 endif()
