--- a/chip/mqqt-exporter/config.json
+++ b/chip/mqqt-exporter/config.json
@@ -1,7 +1,26 @@
 {
-    "name": "MQTT Broker",
-    "ipAdress": "eu1.broker.rechip.eu",
-    "port": 11009,
-    "user": "admin",
-    "password": "admin1234"
+    "ipAdress": "tcp://eu1.broker.rechip.eu",
+    "port": "11009",
+    "clientId": "ExampleClientChip",
+    "qos": 1,
+    "timeout": 3,
+    "period": 1000,
+    "dataSets": {
+        "1": {
+            "topic": "FVE_Telc/+/Total",
+            "name": "power_total",
+            "type": "counter",
+            "unit": "kW",
+            "help": "celkova vyroba menice",
+            "timestemp": 1 
+        },
+        "2": {
+            "topic": "FVE_Telc/+/Uac1",
+            "name": "voltage_AC_phase_1",
+            "type": "gauge",
+            "unit": "U",
+            "help": "napeti na prvni fazi AC strany",
+            "timestemp": 1 
+        }   
+    }
 }
